server/public/css/stylesheet.css
body {
	box-sizing: border-box;
	margin: 0;
}

/* NAV SECTION */
.nav-link {
	color: white;
}

.nav-link:hover {
	color: grey;
}

.user-icon {
	width: 80px;
	height: 75px;
	border-radius: 50%;
	object-fit: cover;
	cursor: pointer;
}

.company-logo {
	width: 75px;
	height: 75px;
}

/* MAIN SECTION */

.homepage {
	height: 50vh;
	width: 100%;
	background-image: url("https://www.umass.edu/campusrec/sites/default/files/styles/slideshow_image/public/images/slideshow/rec-center-image.jpg?itok=cKIO2kIF");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
}

/* INFO SECTION */
.info {
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 1em;
}

.info-text {
	width: 70%;
}

.info-title {
	text-align: center;
	font-size: 3rem;
}

.info-pic {
	height: 200px;
	width: 200px;
	object-fit: cover;
}

/* MATCHING PAGE */

.title {
	font-size: 3rem;
	text-align: center;
}

/* MAIN SECTION */

.slider {
	text-align: center;
	background-color: lightgrey;
}

.name {
	margin-top: 0.5em;
}

.caro-img {
	width: 500px;
	height: 500px;
	object-fit: cover;
}

.carousel-item {
	height: 750px;
}

.selection {
	padding: 1em;
}

.yes {
	font-size: 4.2em;
	color: green;
	padding: 0.25em;
	transform: scale(1);
	transition: transform 250ms;
}

.no {
	font-size: 3.4em;
	color: red;
	padding: 0.25em;
	padding-bottom: 0.5em;
	transform: scale(1);
	transition: transform 250ms;
}

.yes:hover,
.yes:focus,
.no:hover,
.no:focus {
	transform: scale(1.2);
	opacity: 0.9;
}

.select-btn {
	background: none;
	border: none;
}

/* Login */

body#background {
	background-image: url("https://nypost.com/wp-content/uploads/sites/2/2018/01/012018_gym_buddies.jpg?quality=75&strip=all");
	background-repeat: no-repeat;
	background-size: cover;
	background-color: navy;
	height: 100vh;
}

#rectangleBox {
	width: 300px;
	background-color: rgba(181, 186, 186, 0.925);
	border: 5px solid green;
	text-align: center;
	margin: auto;
}

#signupToggle {
	background: none;
	border: none;
	margin: 0;
	padding: 0;
	cursor: pointer;
}

#error-text {
	color: red;
	margin: 0;
}

/* MATCH HISTORY*/
.workouts-carousel-item {
	height: 300px;
}

.border-2 {
	height: 300px;
}

.carousel-control-next,
.carousel-control-prev,
.carousel-indicators {
	filter: invert(100%);
	margin-bottom: 4em;
}

.add-workout-icon {
	object-fit: cover;
	width: 140px;
	height: 140px;
}

.prev-match-img {
	height: 250px;
	width: 250px;
	object-fit: cover;
	margin-right: 4em;
}

.prev-matches-header {
	display: flex;
	align-items: center;
	justify-content: center;
}

.prev-matches-name {
	font-size: 210%;
	font-weight: 500;
}

.prev-matches-info {
	font-size: 150%;
	font-weight: 400;
}

.hidden-file-picker {
	display: none;
}

.profile-picture-preview {
	width: 200px;
	height: 200px;
	object-fit: cover;
}

